Fix alignment on the tagsFix
Fixed alignement on the tags that are displayed on the user's profile.

--- a/style.css
+++ b/style.css
@@ -271,6 +271,7 @@ body {
   }
   .container__user-details-info {
     padding: 2rem;
+    flex-direction: row;
   }
   .container__user-details-info-item {
     padding: 15px;
